Bug 1264429 - Trace script pointers in IonCache r=terrence